--- a/31-12-2024/task.html
+++ b/31-12-2024/task.html
@@ -9,24 +9,24 @@
 <body>
     
     <!-- task1 -->
-    <!-- <div class="hello" onmouseover="change('hello')" onmouseout="funreturn('hello')">
+    <div class="hello" onmouseover="change('hello')" onmouseout="funreturn('hello')">
         <p>Can I Help you?</p>
-    </div> -->
+    </div>
 
 
 
 
     <!-- task2 -->
-    <form>
+    <!-- <form>
 
-        <select id="fonts" name="fonts" >
+        <select id="fonts" name="fonts"  onchange="changefont('text')">
             <option value="TNR" >Times New Roman </option>
-            <option value="fantasy" onclick="changefont('text')">Fantasy</option>
+            <option value="fantasy">Fantasy</option>
         </select>
 
-        <select id="fsize" name="fsize">
+        <select id="fsize" name="fsize" onchange="changesize('text')">
             <option value="size1">10px</option>
-            <option value="size2" onclick="changefont('text')">15px</option>
+            <option value="size2">15px</option>
         </select>
 
         <input type="checkbox" name="fontstyle1" id="fontstyle1" onclick="changeToItalic('text')">
@@ -38,11 +38,11 @@
         <input type="checkbox" name="fontstyle3" id="fontstyle3" onclick="changeToul('text')">
         <label for="fontstyle3">Underline</label> <br><br>
 
-    </form>
+    </form> -->
 
-    <div id="text">the quick brown fox over the lazy dog</div>
+    <!-- <div id="text">the quick brown fox over the lazy dog</div> -->
 
-    <script src="task2.js"></script>
-    <!-- <script src="task1.js"></script> -->
+    <!-- <script src="task2.js"></script> -->
+    <script src="task1.js"></script>
 </body>
 </html>
