--- a/5-1-2025/formtask.html
+++ b/5-1-2025/formtask.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Storage</title>
+    <title>Form</title>
 </head>
 
 <body id="demo">
@@ -47,7 +47,7 @@
     <h2>Stored Data</h2>
     <div id="output"></div>
 
-    <script src="main.js"></script>
+    <script src="form.js"></script>
 </body>
 
 </html>
